--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h3>I'm in the App Component!</h3>
+<hr>
+<app-servers></app-servers>
