--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h3>I'm in the App Component!</h3>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I'm in the App Component!</h3>
+      <hr>
+<!--      <div class="app-servers"></div>-->
+<!--      <div app-servers class="div"></div>-->
+      <app-servers></app-servers>
+      <hr>
+      <app-warning-alert></app-warning-alert>
+      <app-success-alert></app-success-alert>
+    </div>
+  </div>
+</div>
